вспомнил что стоит добавить либу

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "stdint.h": "c",
-        "led.h": "c"
+        "led.h": "c",
+        "gd32f10x.h": "c"
     }
 }
